syntax = "proto3";

option go_package = "discord/gen/proto/schema";
package protoschema;

enum ChannelType {
  TEXT = 0;
  VOICE = 1;
  CATEGORY = 2;
  ANNOUNCEMENT = 3;
  STAGE = 4;
  FORUM = 5;
  DM = 6; // Direct Message
  GROUP_DM = 7; // Group Direct Message
}

message Server {
  int32 id = 1;
  string name = 2;
  string icon = 3;
  string banner = 4;
  string description = 5;
  int32 owner_id = 6;
  string region = 7;
  int32 member_count = 8;
  bool is_verified = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
  bool is_deleted = 12;
  optional string operation = 13;
}

message Channel {
  int32 id = 1;
  string unique_id = 2;
  string name = 3;
  string pic = 4;
  int32 position = 5;
  string description = 6;
  int32 server_id = 7;
  int32 category_id = 8; // Parent category for organization
  ChannelType type = 9;
  bool is_nsfw = 10;
  int32 slowmode_delay = 11; // Seconds between messages
  string topic = 12;
  int64 created_at = 13;
  int64 updated_at = 14;
  bool is_deleted = 15;
  optional string operation = 16;
}

message ChannelMember {
  int32 id = 1;
  int32 channel_id = 2;
  int32 user_id = 3;
  string role = 4;
  int64 joined_at = 5;
  bool is_muted = 6;
  bool is_deafened = 7;
}

message ServerMember {
  int32 id = 1;
  int32 server_id = 2;
  int32 user_id = 3;
  string nickname = 4;
  repeated int32 role_ids = 5;
  int64 joined_at = 6;
  bool is_muted = 7;
  bool is_deafened = 8;
}

message Category {
  int32 id = 1;
  int32 server_id = 2;
  string name = 3;
  int32 position = 4;
  int64 created_at = 5;
}
